--- a/liquid/static/css/main.css
+++ b/liquid/static/css/main.css
@@ -118,3 +118,24 @@ div.carousel-inner:hover ~ a.carousel-control {
 .help-block{
    display:none;
 }
+
+.resume-image-loader{
+   background: url("/static/img/ajax-loader.gif");
+   background-position: center;
+   background-repeat: no-repeat;
+   background-color: #ffffff;
+}
+
+.resume-image-loader img{
+   background: #ffffff;
+}
+
+.resume-thumbnail{
+   width: 102px;
+   height: 132px;
+}
+
+.resume-thumbnail-top{
+   width: 544px;
+   height: 100px;
+}
