add ldap name to resume

--- a/liquid/templates/intranet/resume_manager/main.html
+++ b/liquid/templates/intranet/resume_manager/main.html
@@ -38,6 +38,7 @@
         <img src="/intranet/resume/thumb/top/{{r.id.value}}.png">
       </div>
       <strong>Name:</strong> {{r.id.value|pk_to_name}}<br>
+      <strong>LDAP Name:</strong> {{r.id.value|pk_to_ldap_name}}<br>
       <strong>Level:</strong> {{r.id.value|pk_to_level}}<br>
       <strong>Graduation:</strong> {{r.id.value|pk_to_graduation}}<br>
       <strong>Seeking:</strong> {{r.id.value|pk_to_seeking}}<br>
