--- a/liquid/templates/corporate/resume/student.html
+++ b/liquid/templates/corporate/resume/student.html
@@ -2,7 +2,7 @@
 {% load bootstrap %}
 {% block content %}
 <header class="page-header">
-<h1>Resume Book</h1>
+<h1>ACM@UIUC Resume Book</h1>
 </header>
 <p>The ACM resume book is a packet of resumes provided to interested companies who contact ACM. To be included please fill in the information below.</p>
 <p>If you have any questions <a href="mailto:corporate@acm.uiuc.edu">email us</a>.</p>
