--- a/liquid/templates/cal/main.html
+++ b/liquid/templates/cal/main.html
@@ -3,31 +3,91 @@
 <header class="page-header">
 <h1>Calendar</h1>
 </header>
-{% if events %}
-{% for e in events %}
- {% ifchanged %}<h2>{{ e.starttime|date:"F j Y" }}</h2>{% endifchanged %}
- <p>{{e.starttime|date:"g:i A"}}: <a href="{% url event_details e.id %}">{{e.name}}</a></p>
-{% endfor %}
-{% else %}
-<p>No events</p>
-{% endif %}
-{% if events.paginator.num_pages > 1 %}
-<hr>
-<div class="pagination">
-  <ul>
-     {% if events.has_previous %}
-    <li><a href="/calendar/{{ events.previous_page_number }}">Prev</a></li>
-    {% endif %}
-    {% for i in events.paginator.page_range %}
-    <li{% ifequal i events.number %} class="active"{% endifequal %}>
-       <a href="/calendar/{{ i }}">{{ i }}</a>
-     </li>
-
+<ul class="pager">
+  <li class="previous">
+    <a href="{{prev_url}}">&larr; Older</a>
+  </li>
+  <li>
+    <a href="/calendar/">Today</a>
+  </li>
+  <li class="next">
+    <a href="{{next_url}}">Newer &rarr;</a>
+  </li>
+</ul>
+<table class="table table-bordered calendar">
+  <thead>
+  <tr>
+    <td>Monday</td>
+    <td>Tuesday</td>
+    <td>Wednesday</td>
+    <td>Thursday</td>
+    <td>Friday</td>
+    <td>Weekend</td>
+  <tr>
+  </thead>
+  <tbody>
+    <tr>
+    {% for day in events_grouped %}
+      {% if forloop.counter0 == 6 %}
+      </tr>
+      <tr>
+      {% endif %}
+        <td class="span2{%if forloop.counter0 == today_offset %} info{%endif%}">
+          <div>
+          <p class="date_label">{{day.date}}</p>
+          {% for e in day.events %}
+            <p>{{e.starttime|date:"g:i A"}}:<br><a class="event" href="#details/{{e.id}}">{{e.name}}</a></p>
+          {% endfor %}
+          </div>
+        </td>
     {% endfor %}
-    {% if events.has_next %}
-    <li><a href="/calendar/{{ events.next_page_number }}">Next</a></li>
-    {% endif %}
-  </ul>
+    </tr>
+  </tbody>
+</table>
+<div class="modal hide fade" id="event-details">
+  {% for e in events %}
+  <div id="event-{{e.id}}" class="event-details-inner">
+    <div class="modal-header">
+      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+      <h3>{{e.name}}</h3>
+    </div>
+    <div class="modal-body">
+      <p><strong>Time:</strong> {{e.pretty_time}}</p>
+      <p><strong>Location:</strong> {{e.location}}</p>
+      {% if e.has_sponsors %}
+      <p>Hosted by {{e.all_sponsors}}</p>
+      {% endif %}
+      <p>{{e.description|linebreaks}}</p>
+    </div>
+  </div>
+  {% endfor %}
 </div>
-{% endif %}
+{% endblock %}
+{% block bottom_scripts %}
+<script type="text/javascript">
+function show_event(id){
+  $("#event-"+id).show();
+  $("#event-details").modal("show")
+}
+
+function load_from_hash(){
+  var id = window.location.hash.split('/')[1];
+  show_event(id);
+}
+
+$(document).ready(function(){
+
+  $("#event-details").on('hidden', function () {
+    $(".event-details-inner").hide();
+  });
+
+  $(window).bind('hashchange', function() {
+    load_from_hash();
+  });
+
+  if(window.location.hash != ""){
+    load_from_hash();
+  }
+});
+</script>
 {% endblock %}
