--- a/liquid/templates/cal/main.html
+++ b/liquid/templates/cal/main.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load calendar_helper %}
 {% block content %}
 <header class="page-header">
 <h1>Calendar</h1>
@@ -55,9 +56,9 @@
       <p><strong>Time:</strong> {{e.pretty_time}}</p>
       <p><strong>Location:</strong> {{e.location}}</p>
       {% if e.has_sponsors %}
-      <p>Hosted by {{e.all_sponsors}}</p>
+      <p><strong>Hosts:</strong> {{e.all_sponsors}}</p>
       {% endif %}
-      <p>{{e.description|linebreaks}}</p>
+      <p>{{e.description|replacelinks|linebreaks}}</p>
     </div>
   </div>
   {% endfor %}
