Resume book ready for initial launch

--- a/liquid/templates/corporate/resume/recruiter_base.html
+++ b/liquid/templates/corporate/resume/recruiter_base.html
@@ -11,6 +11,9 @@
   <li{% if page == 'browse' %} class='active'{% endif %}>
     <a href="/corporate/resume/recruiter/browse">Browse</a>
   </li>
+  <li{% if page == 'account' %} class='active'{% endif %}>
+    <a href="/corporate/resume/recruiter/account">Account</a>
+  </li>
 </ul>
 {% block recruiter_content %}
 {% endblock %}
