add browse to resume manager

--- a/liquid/templates/intranet/resume_manager/main.html
+++ b/liquid/templates/intranet/resume_manager/main.html
@@ -12,6 +12,9 @@
   <li{% if sub_page == "accounts" %} class="active"{% endif %}>
     <a href="/intranet/resume/accounts">Accounts</a>
   </li>
+  <li class="pull-right">
+    <a href="/corporate/resume/recruiter">Browse</a>
+  </li>
 </ul>
 
 {% if resume_count %}
