--- a/liquid/templates/intranet/resume_manager/accounts.html
+++ b/liquid/templates/intranet/resume_manager/accounts.html
@@ -13,6 +13,9 @@
   <li{% if sub_page == "accounts" %} class="active"{% endif %}>
     <a href="/intranet/resume/accounts">Accounts</a>
   </li>
+  <li class="pull-right">
+    <a href="/corporate/resume/recruiter">Browse</a>
+  </li>
 </ul>
 
 <p>
