--- a/liquid/templates/cal/main.html
+++ b/liquid/templates/cal/main.html
@@ -2,7 +2,7 @@
 {% load calendar_helper %}
 {% block content %}
 <header class="page-header">
-<h1>Calendar</h1>
+<a href="http://www.google.com/calendar/render?cid=http%3A%2F%2Facm.uiuc.edu%2Fcalendar%2Ffeed" target="_blank" class="pull-right btn btn-primary">Add to Google Calendar</a> <h1>Calendar</h1>
 </header>
 <ul class="pager">
   <li class="previous">
