--- a/liquid/templates/about/committees_details.html
+++ b/liquid/templates/about/committees_details.html
@@ -5,7 +5,7 @@
 </header>
 <p>{{c.description}}</p>
 <p>Chairs: {{c.chairs}}</p>
-<p>Email: <a href="mailto:{{c.mailing_list}}">{{c.mailing_list}}</a></p>
+<p>Email: <a href="mailto:{{c.mailing_list.email}}">{{c.mailing_list.email}}</a></p>
 <p>
    Members:
    <ul>
