--- a/liquid/templates/about/join.html
+++ b/liquid/templates/about/join.html
@@ -1,9 +1,44 @@
 {% extends "about/base.html" %}
+{% load bootstrap %}
 {% block about_content %}
 <header class="page-header">
 <h1>Joining ACM@UIUC</h1>
 </header>
 <p>If you are interested in getting involved with ACM, the best way is to start showing up at events. There are many events every week, and you do not need to be a member to attend. Also, note that ACM, its executive board, and all of its SIGs have mailing lists. Mailing lists are a great way to stay informed on what ACM and SIGs are doing.</p>
 
-<p>Once you've found your niche in ACM or one of its SIGs, becoming an official member is easy. To become an official member, you need to fill out a quick and easy form. The form is available in the ACM office; the cost is $40 for a lifetime membership. Benefits of membership include an account on the ACM cluster and eligibility for ACM officer positions. Drop by the ACM office any time between 9:00 AM and 5:00 PM and sign up!</p>
+<p>Once you've found your niche in ACM or one of its SIGs, becoming an official member is easy. To become an official member, you need to fill out the quick and easy form below. The cost is $40 for a lifetime membership. Benefits of membership include an account on the ACM cluster and eligibility for ACM officer positions. Sign up below, then drop by the ACM office any time between 9:00 AM and 5:00 PM with your $40 in cash or check</p>
+
+<h2>Join Now</h2>
+ <form class="well" method="post" enctype="multipart/form-data">
+   {% csrf_token %}
+   <div class="row">
+      <div class="span4">
+         {{ form|bootstrap }}
+         <p>Lifetime Membership $40</p>
+      </div>
+      <div class="span4">
+         <p>What Special Interest Groups (SIGS) are you interest in? (This will add you to the SIG's mailing list)</p>
+          <div class="controls">
+            <ul class="span2">
+            {% for s in sigs %}
+               {% if forloop.counter0 == sig_count_half %}
+               </ul>
+               <ul class="span1">
+               {% endif %}
+               <li>
+                  <label class="checkbox">
+                     <input type="checkbox" name="sigs" value="{{s.id}}"{% if s.id in choosen_sigs %} checked="checked"{% endif%}> {{s.name}}
+                  </label>
+               </li>
+            {% endfor %}
+            </ul>
+         </div>
+      </div>
+   </div>
+   <div class="control-group">
+     <div class="controls">
+       <button type="submit" class="btn btn-primary">Join</button>
+     </div>
+   </div>
+ </form>
 {% endblock %}
