--- a/liquid/templates/intranet/member_database/search.html
+++ b/liquid/templates/intranet/member_database/search.html
@@ -1,4 +1,5 @@
 {% extends "intranet/base.html" %}
+{% load bootstrap_pagination %}
 {% block intranet_content %}
 <header class="page-header">
 <h1>Member Manager</h1>
@@ -7,6 +8,15 @@
   <input type="text" name="q" class="input-medium search-query" value="{% if q %}{{q}}{% endif %}">
   <button type="submit" class="btn">Search</button>
 </form>
+
+
+
+
+<p>
+  <em>{{total_members}} {%if total_members or total_members < 1 %}people match{%else%}person matches{%endif%} your query.</em>
+</p>
+{% if members|length > 0 %}
+<hr>
 
 <table class="table table-striped">
   <thead>
@@ -38,5 +48,11 @@
   {% endfor %}
   </tbody>
 </table>
+
+{% if members.has_other_pages %}
+<hr>
+{% bootstrap_paginate members range=10 %}
+{% endif %}
+{% endif %}
 
 {% endblock %}
