New member flow should now work

--- a/liquid/templates/intranet/member_database/main.html
+++ b/liquid/templates/intranet/member_database/main.html
@@ -8,7 +8,7 @@
      <button type="submit" class="btn">Search</button>
    </form>
 </div>
-{% if user.is_top4 %}
+{% if user.is_admin %}
 <h2>Pre Members</h2>
 <table class="table table-striped">
   <thead>
