--- a/liquid/templates/intranet/resume_manager/account_form.html
+++ b/liquid/templates/intranet/resume_manager/account_form.html
@@ -12,6 +12,12 @@
   {{ form|bootstrap }}
   <div class="control-group">
     <div class="controls">
+      <label class="control-label" for="inputEmail">Welcome Message</label>
+      <textarea name="message">{{message}}</textarea>
+    </div>
+  </div>
+  <div class="control-group">
+    <div class="controls">
       <button type="submit" class="btn btn-primary">Save</button>
     </div>
   </div>
