--- a/liquid/templates/corporate/resume/recruiter_base.html
+++ b/liquid/templates/corporate/resume/recruiter_base.html
@@ -14,6 +14,9 @@
   <li{% if page == 'account' %} class='active'{% endif %}>
     <a href="/corporate/resume/recruiter/account">Account</a>
   </li>
+  <li{% if page == 'help' %} class='active'{% endif %}>
+    <a href="/corporate/resume/recruiter/help">Help</a>
+  </li>
 </ul>
 {% block recruiter_content %}
 {% endblock %}
