--- a/liquid/templates/corporate/resume/recruiter_help.html
+++ b/liquid/templates/corporate/resume/recruiter_help.html
@@ -3,7 +3,7 @@
 {% load bootstrap %}
 {% block recruiter_content %}
 <h3>How do I change my password or contact email address</h3>
-<p>You can change your password an email address in the account manager by pressing the account tab above. If you have any trouble don't hesitate to email <a href="mailto:corporate@acm.uiuc.edu">corporate@acm.uiuc.edu</a>.</p>
+<p>You can change your password and email address in the account manager by pressing the account tab above. If you have any trouble don't hesitate to email <a href="mailto:corporate@acm.uiuc.edu">corporate@acm.uiuc.edu</a>.</p>
 <h3>How do I download the resume book?</h3>
 <p>To download the ACM@UIUC resume book, you must first create a download set. This is a filtered set of all the resumes available through our system. To create a download set, click the browse tab above and fill out the form to the filter parameters you wish to view and then click the blue 'create download' button. To create a download of all available resumes, just leave the form blank and click the 'create download' button, and you will get the full, unfiltered set.</p>
 <h3>How do I get new and updated resumes?</h3>
