Make the message more useable

--- a/liquid/templates/intranet/resume_manager/account_form.html
+++ b/liquid/templates/intranet/resume_manager/account_form.html
@@ -13,7 +13,7 @@
   <div class="control-group">
     <div class="controls">
       <label class="control-label" for="inputEmail">Welcome Message</label>
-      <textarea name="message">{{message}}</textarea>
+      <textarea name="message" class="span6" style="height:150px;">{{message}}</textarea>
     </div>
   </div>
   <div class="control-group">
