Changes to resume book that Rebecca wants

--- a/liquid/templates/corporate/resume/recruiter_browse.html
+++ b/liquid/templates/corporate/resume/recruiter_browse.html
@@ -25,7 +25,7 @@
     <td>{{p.get_level_display}}</td>
     <td>{{p.get_seeking_display}}</td>
     <td>{{p.acm_member}}</td>
-    <td><a href="/corporate/resume/recruiter/pdf/{{p.netid}}.pdf">PDF</a></td>
+    <td><a href="/corporate/resume/recruiter/pdf/{{p.netid}}.pdf" target="_blank">PDF</a></td>
   </tr>
   {% endfor %}
   </tbody>
