--- a/liquid/templates/404.html
+++ b/liquid/templates/404.html
@@ -88,6 +88,10 @@ function type_text()
 //-->
 window.onload = function(){
   type_text();
+  
+  if(window.location.pathname == "/sigmil/RevEng/index.html"){
+    window.location = "http://www.reddit.com/r/funny/comments/10vgdc/witty_404_error/";
+  }
 }
 </script>
 <p>
