Remove banks link

--- a/liquid/templates/base.html
+++ b/liquid/templates/base.html
@@ -37,7 +37,7 @@
           <li{% if section == 'about' %} class='active'{% endif %}><a href="/about">About</a></li>
           <li{% if section == 'calendar' %} class='active'{% endif %}><a href="/calendar">Calendar</a></li>
           <li{% if section == 'sigs' %} class='active'{% endif %}><a href="/sigs">SIGs</a></li>
-          <li{% if section == 'banks' %} class='active'{% endif %}><a href="/banks">Banks</a></li>
+          <!--<li{% if section == 'banks' %} class='active'{% endif %}><a href="/banks">Banks</a></li>-->
           <li{% if section == 'conference' %} class='active'{% endif %}><a href="/conf">Conference</a></li>
           <li{% if section == 'corporate' %} class='active'{% endif %}><a href="/corporate">Corporate</a></li>
           <li{% if section == 'contact' %} class='active'{% endif %}><a href="/contact">Contact</a></li>
