--- a/liquid/templates/base.html
+++ b/liquid/templates/base.html
@@ -80,7 +80,7 @@
     </div> <!-- /container -->
     
     <footer class="container">
-        ACM@UIUC | <a href="tel:1-217-333-5828">(217)-333-5828</a> | <a href="acm@uiuc.edu">acm@uiuc.edu</a> | Ste. 1104 Thomas M. Siebel Center for Computer Science, 201 N. Goodwin Ave. Urbana, IL 61801
+        ACM@UIUC | <a href="tel:1-217-333-5828">(217)-333-5828</a> | <a href="mailto:acm@uiuc.edu">acm@uiuc.edu</a> | Ste. 1104 Thomas M. Siebel Center for Computer Science, 201 N. Goodwin Ave. Urbana, IL 61801
     </footer>
 
     <!-- Le javascript
