fixed long standing spelling errors on corporate page

--- a/liquid/templates/corporate/main.html
+++ b/liquid/templates/corporate/main.html
@@ -29,7 +29,7 @@
                 <hr>
                 <h4>Students</h4>
                 <p>
-                    Want to have your resume seen by recruiters from some of the biggest companies in the tech industry? Just upload your resume and it will imediately be avalible to recruiters.
+                    Want to have your resume seen by recruiters from some of the biggest companies in the tech industry? Just upload your resume and it will immediately be available to recruiters.
                 </p>
                 <p>
                     <a href="/resume" class="btn btn-primary">Upload your resume</a>
