Spelling/grammar fixes. No, I'm not an English major.

--- a/liquid/templates/about/main.html
+++ b/liquid/templates/about/main.html
@@ -25,7 +25,7 @@ ACM@UIUC is a group of dedicated people who are interested in exploring the
 possibilities of computers and learning more about how to use and develop them.
 ACM is divided into Special Interest Groups, or SIGs, which focus on specific
 interest areas in computer science and computing. Each SIG holds its own
-meetings. Each SIG is responsible for orginizing its own activities and
+meetings. Each SIG is responsible for organizing its own activities and
 determining its own purpose. Several SIGs are project based, with the majority
 of their activities dedicated to computing projects in their area of interest,
 often presented at Engineering Open House. Some SIGs run workshops and tech
@@ -44,7 +44,7 @@ regardless of computer experience and background.
 </p>
 
 <p>
-ACM@UIUC holds an Exec meeting most Mondays, at which the direction on ACM is
+ACM@UIUC holds an Exec meeting most Mondays, at which the direction of ACM is
 defined. Everyone is welcome to attend and make suggestions for new ACM groups
 or events. Decisions about such events and other important ACM matters are also
 made at these meetings.
