--- a/liquid/templates/conference/main.html
+++ b/liquid/templates/conference/main.html
@@ -1,12 +1,31 @@
 {% extends "conference/base.html" %}
 {% block content %}
 <div class="row">
-  <div id="save-the-date" class="span5">
-    <h1>Save the Date!</h1>
-    <h3>Reflections | Projections 2013</h3>
+  <div id="save-the-date" class="span6">
+    <h1>SAVE THE DATE</h1>
     <h2>October 10 - 13, 2013</h2>
   </div>
-  <div class="span6 nikoli"><img src="/static/img/conference/2012_photos/clarealbum3.jpg" alt="" /></div>
+  <div id="event-dates" class="span6">
+    <div class="event-line">
+      <h3>Thursday, October 10</h3>
+      <div>Startup Fair</div>
+    </div>
+    <div class="event-line">
+      <h3>Friday, October 11</h3>
+      <div>
+        <div>Speaker Talks</div>
+        <div>Job Fair</div>
+        <div>Mechmania Opening Ceremony</div>
+      </div>
+    </div>
+    <div class="event-line">
+      <h3>Saturday, October 12</h3>
+      <div>Speaker Talks</div>
+    </div>
+    <div class="event-line">
+      <h3>Sunday, October 13</h3>
+      <div>Mechmania Closing Ceremony</div>
+    </div>
+  </div>
 </div>
-
 {% endblock %}
