--- a/liquid/static/css/conference.scss
+++ b/liquid/static/css/conference.scss
@@ -23,10 +23,15 @@ body {
     background-repeat: tile;
 }
 
+h3 {
+    margin-bottom: 0;
+}
+
 #the-meat {
-    background-color: rgba(255, 255, 255, 0.75);
-    height: 100%;
+    background-color: rgba(255, 255, 255, 1.0);
     @include box-shadow(0px, 0px, 30px, 0px, #ddd);
+    height: 92%;
+    margin-top: 25px;
 }
 
 #triangle-bar {
@@ -57,10 +62,16 @@ body {
     h1 {
 	color: $darkpink;
     }
-    font-family: tahoma, sans serif;
-    font-size: 32px;
-    text-align: center;
-    margin: 50px 0 0 50px;
+    font-family: Helvetica, sans serif;
+    text-align: right;
+}
+
+#event-dates {
+    .event-line {
+	div {
+	    font-size: 14px;
+	}
+    }
 }
 
 .header_bar {
