--- a/liquid/templates/conference/base.html
+++ b/liquid/templates/conference/base.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Le styles -->
+	<link href='http://fonts.googleapis.com/css?family=Dancing+Script:700' rel='stylesheet' type='text/css'>
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/css/conference.css" rel="stylesheet">
+
     {% block top_styles %}
     {% endblock %}
 
@@ -36,11 +38,6 @@
     <div id="the-meat" class="container">
       <div class="container">
         <div class="header">
-          <div class="header_bar">
-            <a class="header" href="/">
-              <img src="/static/img/conference/header-logo.png" class="ilogo">
-            </a>
-          </div>
           <!--<div id="triangle-bar"></div>-->
           <!-- <ul class="navbar-fixed-bottom nav-pills main_nav">
             <li{% if section == 'about' %} class='active'{% endif %}><a href="/about">About</a></li>
