--- a/liquid/static/css/conference.css
+++ b/liquid/static/css/conference.css
@@ -39,19 +39,20 @@ body {
     -webkit-box-shadow: 0 15px 10px rgba(0, 0, 0, 0.7); }
 
 #save-the-date {
-  text-align: center; }
+  text-align: center;
+  font-family: "Roboto", sans-serif;
+  font-weight: bold; }
   #save-the-date a {
     color: #ba1151; }
-  #save-the-date h1 {
-    color: #ba1151;
-    font-family: sans-serif; }
+  #save-the-date h2 {
+    color: #ba1151; }
   #save-the-date p {
     width: 70%;
     font-size: 20px;
     line-height: 26px;
     display: block;
     margin: auto;
-    text-align: left; }
+    text-align: center; }
 
 #event-dates {
   margin: 0 0 30px 50px; }
@@ -63,6 +64,7 @@ body {
   #event-dates .event-day {
     margin: 0; }
     #event-dates .event-day li {
+      margin-bottom: 8px;
       text-align: center;
       list-style-type: none;
       font-size: 16px; }
