--- a/liquid/static/css/conference.scss
+++ b/liquid/static/css/conference.scss
@@ -61,9 +61,10 @@ body {
 		color: $darkpink;
 	}
 	text-align: center;
-    h1 {
+	font-family: "Roboto", sans-serif;
+	font-weight: bold;
+    h2 {
 		color: $darkpink;
-		font-family: sans-serif;
     }
 
 	p {
@@ -72,7 +73,7 @@ body {
 		line-height: 26px;
 		display: block;
 		margin: auto;
-		text-align: left;
+		text-align: center;
 	}
 }
 
@@ -88,6 +89,7 @@ body {
     .event-day {
 		margin: 0;
 		li {
+			margin-bottom: 8px;
 			text-align: center;
 			list-style-type: none;				
 			font-size: 16px;
