--- a/liquid/templates/conference/landing.html
+++ b/liquid/templates/conference/landing.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
     <!-- Le styles -->
-	<link href='http://fonts.googleapis.com/css?family=Dancing+Script:700' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Roboto:400,700' rel='stylesheet' type='text/css'>
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/css/conference.css" rel="stylesheet">
 	
@@ -46,7 +46,7 @@
 				<hr />
 				<p>Reflections | Projections, the annual computing conference at the 
 				  <a href="http://illinois.edu">University of Illinois Urbana-Champaign,</a> 
-				  will be returning this October! Come hear exciting speakers from across industry and academia! Look for a career at our CS/ECE job fair, otr if you are more interested in the startup world, our new Startup Fair! In a competitive mood? Participate in MechMania, a 24-hour programming competitio, or <a href="http://puzzlebang.com">PuzzleBang</a>!, a fun series of cryptography games! </p>
+				  will be returning this October! Come hear exciting speakers from across industry and academia! Look for a career at our CS/ECE job fair, or if you are more interested in the startup world, our new Startup Fair! In a competitive mood? Participate in MechMania, a 24-hour programming competitio, or <a href="http://puzzlebang.com">PuzzleBang</a>!, a fun series of cryptography games! </p>
 				
 			  </div>
 			</div>
@@ -68,6 +68,7 @@
 			   <div class="span3 event-day">
 				 <h3>Saturday, October 12</h3>
 				 <li>Speaker Talks</li>
+				 <li>PuzzleBang Finishes</li>
 			   </div>
 			   <div class="span3 event-day">
 				 <h3>Sunday, October 13</h3>
@@ -91,6 +92,8 @@
 		<hr />
 		<div class="row">
 		  <div class="social-links span12">
+			<a href="mailto:conference-chair@acm.uiuc.edu">Send us an Email</a>
+			&middot;
 			<a href="https://twitter.com/acmreflections">Follow us on Twitter</a>
 			&middot;
 			<a href="https://www.facebook.com/acmrp">Like us on Facebook</a>
