updated subscriber url

--- a/liquid/templates/conference/landing.html
+++ b/liquid/templates/conference/landing.html
@@ -78,7 +78,7 @@
 		   </div>
 		   <div class="row">
 			 <div class="span12">
-			   <form class="form-inline well email-subscribe" method="get" action="/conference/subscribe">
+			   <form class="form-inline well email-subscribe" method="get" action="/conference/subscribe/">
 				<div class="message"></div>
 				<label for="subscribe">Subscribe to recieve updates!  </label> 
 				<div class="input-fields">
