Update for new top4 and other leadership

--- a/liquid/templates/contact.html
+++ b/liquid/templates/contact.html
@@ -7,52 +7,56 @@
   <div class="span6">
     <h2>Contacts</h2>
     <p><strong>Chair</strong><br>
-        Brianna Birman<br>
+        Robert Pieta<br>
         <a href="mailto:acm@uiuc.edu">acm@uiuc.edu</a>
     </p>
     
     <p><strong>Vice Chair</strong><br>
-        Sean Nicolay<br>
+        Clare Curtis<br>
        <a href="mailto:vice-chair@acm.uiuc.edu">vice-chair@acm.uiuc.edu</a>
     </p>
     
     <p><strong>Treasurer</strong><br>
-       Nathan Handler<br>
+       Nikoli Dryden<br>
        <a href="mailto:treasurer@acm.uiuc.edu">treasurer@acm.uiuc.edu</a>
     </p>
     
     <p><strong>Secretary</strong><br>
-       Reed La Botz<br>
+       Brendan Ryan<br>
        <a href="mailto:secretary@acm.uiuc.edu">secretary@acm.uiuc.edu</a>
     </p>
     
     <p><strong>Cluster Admins</strong><br>
-       Dylan Nugent, Kevin Lange,
-       Markus Schober,
-       Sean Nicolay, Drew Cross,
-       Nick Tabick, Eric Parsons,
-       Josh Ginsburg, Sam Laane,
-       Cole Gleason, Yalan Meng,
-       Kurtis Nusbaum, Matt Dierker,
-       Nathan Handler, Matthew Idzik,
-       Calvin Shirley<br>
+       Dylan Nugent, 
+       Sean Nicolay, 
+       Drew Cross, 
+       Nick Tabick, 
+       Josh Ginsburg, 
+       Sam Laane, 
+       Cole Gleason, 
+       Kurtis Nusbaum,
+       Matthew Dierker, 
+       Nathan Handler, 
+       Calvin Shirley
+       <br>
        <a href="mailto:admin@acm.uiuc.edu">admin@acm.uiuc.edu</a>
      </p>
 
      <p><strong>Corporate Committee</strong><br>
         Ciara Proctor, Brianna Birman,
-        Nikoli Dryden,
-        Rob Burke, Nelson Osacky, Hristo Oskov<br>
+        Nikoli Dryden, Jicong Wang, 
+        Nelson Osacky, Cole Gleason, 
+        Nathan Handler<br>
         <a href="mailto:corporate@acm.uiuc.edu">corporate@acm.uiuc.edu</a>
      </p>
      
      <p><strong>Social Chairs</strong><br>
-        Kellie Rios, Ciara Proctor<br>
+        Ciara Proctor, Clare Curtis<br>
         <a href="mailto:social@uiuc.edu">social@acm.uiuc.edu</a>
      </p>
      
      <p><strong>Banks Editor</strong><br>
-        Reed La Botz<br>
+        Brendan Ryan<br>
         <a href="mailto:boneyard@acm.uiuc.edu">boneyard@uiuc.edu</a>
       </p>
 
