--- a/liquid/templates/conf.html
+++ b/liquid/templates/conf.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <header class="page-header" style="text-align:center;">
-<img src="http://www.acm.uiuc.edu/static/img/conference/header-logo.png" />
+<img src="/static/img/conference/header-logo.png" />
 </header>
 <p>
   Eighteen years ago, the student chapter of the Association for Computing Machinery at the University of Illinois (ACM@UIUC) held its first computing conference. 150 students from across the midwest attended the event, which was supported by 14 corporations.
@@ -12,5 +12,5 @@
 <p>
   ACM could not host Reflections | Projections without the generous support of our sponsors. Their donations fund all the events and help keep student fees low.
 </p>
-<p>For more information, please visit the website: <a href="http://www.acm.uiuc.edu/conference/">http://www.acm.uiuc.edu/conference/</a>.</p>
+<p>For more information, please visit the website: <a href="/conference/">http://www.acm.uiuc.edu/conference/</a>.</p>
 {% endblock %}
