--- a/liquid/templates/intranet/base.html
+++ b/liquid/templates/intranet/base.html
@@ -42,6 +42,10 @@
             <li{% if page == 'resume' %} class='active'{% endif %}>
               <a href="/intranet/resume">Resume Manager</a>
             </li> 
+          <li class="nav-header">Conference</li>
+            <li{% if page == 'jobfair' %} class='active'{% endif %}>
+              <a href="/intranet/jobfair_manager/companies">Jobfair Manager</a>
+            </li> 
         </ul>
       </div><!--/.well -->
     </div>
