--- a/liquid/static/css/conference.css
+++ b/liquid/static/css/conference.css
@@ -109,3 +109,14 @@ hr {
     font-size: 16px;
     margin-left: 5px;
     margin-right: 5px; }
+
+#job-fair-form {
+  -webkit-border-radius: 12px;
+  -moz-border-radius: 12px;
+  border-radius: 12px;
+  -webkit-box-shadow: 0px 0px 30px 0px #222222;
+  -moz-box-shadow: 0px 0px 30px 0px #222222;
+  box-shadow: 0px 0px 30px 0px #222222;
+  margin-top: 30px;
+  background-color: #eee;
+  padding: 10px; }
