I'm storing plaintext passwords.  Please don't judge me.
I'll fix this up in the future, hopefully.

--- a/liquid/templates/intranet/base.html
+++ b/liquid/templates/intranet/base.html
@@ -44,7 +44,7 @@
             </li> 
           <li class="nav-header">Conference</li>
             <li{% if page == 'jobfair' %} class='active'{% endif %}>
-              <a href="/intranet/jobfair_manager/companies">Jobfair Manager</a>
+              <a href="/intranet/jobfair_manager/companies">Job Fair Manager</a>
             </li> 
         </ul>
       </div><!--/.well -->
