--- a/liquid/templates/intranet/jobfair_manager/companies.html
+++ b/liquid/templates/intranet/jobfair_manager/companies.html
@@ -17,7 +17,7 @@
     <th>Edit</th>
     <th>Company</th>
     <th>Username</th>
-    <th>email</th>
+    <th>Email</th>
     <th>Actions</th>
   </tr>
   </thead>
