Change manage.py crunchbang and correct some typos in resume

--- a/liquid/templates/intranet/resume_manager/accounts.html
+++ b/liquid/templates/intranet/resume_manager/accounts.html
@@ -29,11 +29,11 @@
     <th>Edit</th>
     <th>Company</th>
     <th>Username</th>
-    <th>email</th>
+    <th>Email</th>
     <th>Expires</th>
     <th>Actions</th>
   <tr>
-  </thea>
+  </thead>
   <tbody>
   {% for r in recruiters %}
   <tr>
