Change manage.py crunchbang and correct some typos in resume

--- a/liquid/templates/conference/job-fair-login.html
+++ b/liquid/templates/conference/job-fair-login.html
@@ -7,7 +7,7 @@
         <img class="header-logo" src="/static/img/conference/header-logo.png" />
         <hr />
         <h2>For students:</h2>
-        <p>The reflections | projections jobfair is always a great place to look for jobs in CS/ECE fields.  Dress is casual, so don't suit up!
+        <p>The Reflections | Projections jobfair is always a great place to look for jobs in CS/ECE fields.  Dress is casual, so don't suit up!
         We don't have the list of companies up yet, but check back mid-Summer for more information!</p>
         <h2>For companies:</h2>
         <p>Hey there! We are glad you are interested in our job fair! Registration for the job fair is done by invitation only.
